// ============================================================
// College ERP — Database Schema (DBML)
// Philosophy: Read-heavy, max 4-5 joins, acceptable redundancy
// ============================================================

// ─────────────────────────────────────────
// CORE LOOKUP / MASTER TABLES
// ─────────────────────────────────────────

Table courses {
  id          int         [pk, increment]
  name        varchar(100) [not null]          // "Bachelor of Computer Applications"
  code        varchar(20)  [not null, unique]  // "BCA", "BCAAI", "BCADS"
  total_sems  int          [not null, default: 6]
}

Table semesters {
  id          int         [pk, increment]
  name        varchar(50) [not null]           // "Sem 1 (2024-25)"
  start_date  date        [not null]
  end_date    date        [not null]
  is_active   boolean     [not null, default: false]

  Note: 'Time-based semester. One active at a time. All academic data hangs off this.'
}

Table subjects {
  id           int         [pk, increment]
  name         varchar(100) [not null]         // "Java Programming"
  code         varchar(20)  [not null, unique] // "CS301"
  subject_type varchar(20)  [not null]         // "theory" | "practical" | "both"
}

Table roles {
  id   int         [pk, increment]
  name varchar(50) [not null, unique]           // "student" | "faculty" | "counselor" | "hod"
}


// ─────────────────────────────────────────
// DIVISIONS
// Redundancy: stores course_code + course_name inline
// Avoids joining courses on every attendance/marks query
// ─────────────────────────────────────────

Table divisions {
  id           int         [pk, increment]
  semester_id  int         [not null, ref: > semesters.id]
  course_id    int         [not null, ref: > courses.id]

  // Redundant but saves a join on every read
  course_code  varchar(20) [not null]           // "BCA"
  course_name  varchar(100)[not null]           // "Bachelor of Computer Applications"

  semester_no  int         [not null]           // 1-6 (academic level)
  division_no  int         [not null]           // 1, 2, 3 ... (continuous across courses)
  display_name varchar(50) [not null]           // "SYBCA DIV2" — computed & stored for reads
  max_capacity int         [not null, default: 60]

  indexes {
    (semester_id, course_id, semester_no, division_no) [unique]
  }

  Note: 'display_name stored to avoid string-building on every list/dropdown. Sync on write.'
}


// ─────────────────────────────────────────
// FACULTY
// ─────────────────────────────────────────

Table faculty {
  id               int          [pk, increment]
  faculty_code     varchar(20)  [not null, unique]   // "FAC001"
  name             varchar(100) [not null]
  email            varchar(150) [not null, unique]
  mobile           varchar(15)  [not null]
  password_hash    varchar(255) [not null]
  must_change_pwd  boolean      [not null, default: true]

  // Profile (filled after first login)
  gender           varchar(10)
  dob              date
  qualification    varchar(100)  // "MSc", "PhD"
  experience_years int
  specialization   varchar(150)
  designation      varchar(100)  // "Assistant Professor", "Associate Professor"

  is_active        boolean [not null, default: true]
  created_at       timestamp [not null, default: `now()`]
}

// Roles assigned to faculty (many-to-many, permanent)
Table faculty_roles {
  faculty_id int [not null, ref: > faculty.id]
  role_id    int [not null, ref: > roles.id]

  indexes {
    (faculty_id, role_id) [pk]
  }

  Note: 'Roles are permanent. hod/counselor/faculty are additive, not exclusive.'
}


// ─────────────────────────────────────────
// STUDENTS
// ─────────────────────────────────────────

Table students {
  id               int          [pk, increment]
  temp_id          varchar(30)  [unique]             // Before HOD approval
  student_id       varchar(20)  [unique]             // "24BCADS001" — after approval
  spid             varchar(30)  [unique]
  enrollment_id    varchar(30)  [unique]
  abc_id           varchar(30)  [unique]

  // Personal
  full_name        varchar(150) [not null]
  dob              date         [not null]
  gender           varchar(10)  [not null]
  blood_group      varchar(5)
  email            varchar(150) [not null, unique]
  mobile           varchar(15)  [not null, unique]
  parent_mobile    varchar(15)
  optional_mobile  varchar(15)
  address          text
  aadhaar_student  varchar(20)
  aadhaar_parent   varchar(20)

  // Academic background
  course_id        int          [not null, ref: > courses.id]
  category         varchar(10)  [not null]            // "SC","ST","OBC","Open"
  board            varchar(20)  [not null]            // "GSEB","CBSE"
  twelfth_percent  decimal(5,2)
  twelfth_stream   varchar(50)
  school_name      varchar(200)
  udise_code       varchar(20)

  // Entry type
  // "fresh" = Sem1, "lateral" = Sem3, "direct" = Sem5, "erp_onboarding" = existing student setup
  entry_type       varchar(20)  [not null, default: 'fresh']
  entry_semester_no int         [not null, default: 1]   // 1,3,5 — or any sem for onboarding

  // Current placement (redundant — denormalized for fast dashboard reads)
  current_semester_no   int
  current_division_id   int    [ref: > divisions.id]
  current_division_name varchar(50)   // "SYBCA DIV2" — synced on promotion

  // Status
  status           varchar(20)  [not null, default: 'pending']  // pending | active | inactive
  password_hash    varchar(255)
  profile_photo    varchar(255)

  created_at       timestamp [not null, default: `now()`]

  Note: 'current_division_name stored to avoid join on student list/dashboard. Sync on promotion.'
}

Table student_documents {
  id          int         [pk, increment]
  student_id  int         [not null, ref: > students.id]
  doc_type    varchar(50) [not null]   // "lc","marksheet_10","marksheet_12","caste_cert","migration","photo","prev_marksheet","tc","equivalency","noc"
  file_path   varchar(255)[not null]
  uploaded_at timestamp   [not null, default: `now()`]
}

// Previous institution info — only for lateral / direct / onboarding students
Table student_prior_education {
  id                    int          [pk, increment]
  student_id            int          [not null, unique, ref: > students.id]
  prev_institution      varchar(200) [not null]
  prev_course           varchar(100) [not null]
  prev_enrollment_no    varchar(50)
  semesters_completed   int          [not null]
  reason_for_transfer   text
}


// ─────────────────────────────────────────
// FACULTY ASSIGNMENTS (semester-scoped)
// Redundancy: stores division_name, subject_name, faculty_name
// Avoids joins on timetable, attendance entry, marks entry screens
// ─────────────────────────────────────────

Table faculty_subject_assignments {
  id            int         [pk, increment]
  semester_id   int         [not null, ref: > semesters.id]
  faculty_id    int         [not null, ref: > faculty.id]
  subject_id    int         [not null, ref: > subjects.id]
  division_id   int         [not null, ref: > divisions.id]

  // Redundant — denormalized for reads
  faculty_name    varchar(100) [not null]
  subject_name    varchar(100) [not null]
  subject_type    varchar(20)  [not null]   // theory | practical | both
  division_name   varchar(50)  [not null]   // "SYBCA DIV2"
  course_code     varchar(20)  [not null]

  indexes {
    (semester_id, faculty_id, subject_id, division_id) [unique]
  }

  Note: 'One row = one faculty teaching one subject in one division for one semester.'
}

Table counselor_division_assignments {
  id           int         [pk, increment]
  semester_id  int         [not null, ref: > semesters.id]
  faculty_id   int         [not null, ref: > faculty.id]
  division_id  int         [not null, ref: > divisions.id]

  // Redundant
  faculty_name   varchar(100) [not null]
  division_name  varchar(50)  [not null]

  indexes {
    (semester_id, faculty_id, division_id) [unique]
  }

  Note: 'A division can have multiple counselors. A counselor can handle multiple divisions.'
}


// ─────────────────────────────────────────
// TIMETABLE
// Redundancy: subject_name, faculty_name, division_name stored inline
// This is read constantly (every page load for students/faculty)
// ─────────────────────────────────────────

Table timetable_entries {
  id             int         [pk, increment]
  semester_id    int         [not null, ref: > semesters.id]
  division_id    int         [not null, ref: > divisions.id]
  assignment_id  int         [not null, ref: > faculty_subject_assignments.id]

  day_of_week    varchar(10) [not null]    // "Monday" ... "Saturday"
  start_time     time        [not null]    // "09:00"
  end_time       time        [not null]    // "10:00"

  // Redundant — every timetable read needs these
  subject_name   varchar(100) [not null]
  faculty_name   varchar(100) [not null]
  division_name  varchar(50)  [not null]
  course_code    varchar(20)  [not null]

  indexes {
    (division_id, day_of_week, start_time, semester_id)
    (assignment_id, semester_id)
  }

  Note: 'Faculty timetable = filter by assignment_id. Division timetable = filter by division_id. No extra join.'
}


// ─────────────────────────────────────────
// ATTENDANCE
// ─────────────────────────────────────────

Table attendance_sessions {
  id              int         [pk, increment]
  timetable_id    int         [not null, ref: > timetable_entries.id]
  semester_id     int         [not null, ref: > semesters.id]
  division_id     int         [not null, ref: > divisions.id]
  date            date        [not null]
  is_cancelled    boolean     [not null, default: false]

  // Redundant — avoid join when listing sessions
  subject_name    varchar(100) [not null]
  faculty_name    varchar(100) [not null]
  division_name   varchar(50)  [not null]

  indexes {
    (timetable_id, date) [unique]
    (division_id, date, semester_id)
    (semester_id, date)
  }

  Note: 'Unique lecture = timetable_id + date. Cancelled sessions excluded from % calc.'
}

Table attendance {
  id                   int        [pk, increment]
  attendance_session_id int       [not null, ref: > attendance_sessions.id]
  student_id           int        [not null, ref: > students.id]
  status               varchar(10)[not null]   // "present" | "absent"

  indexes {
    (attendance_session_id, student_id) [unique]
    (student_id, attendance_session_id)
  }

  Note: 'One row per student per lecture. % = COUNT(present) / COUNT(non-cancelled sessions).'
}


// ─────────────────────────────────────────
// MARKS
// ─────────────────────────────────────────

Table marks {
  id             int          [pk, increment]
  student_id     int          [not null, ref: > students.id]
  assignment_id  int          [not null, ref: > faculty_subject_assignments.id]
  semester_id    int          [not null, ref: > semesters.id]

  // Redundant — avoid join on marks entry/view screens
  student_name   varchar(150) [not null]
  subject_name   varchar(100) [not null]
  subject_type   varchar(20)  [not null]   // theory | practical | both
  division_name  varchar(50)  [not null]

  // Atomic mark components (nullable — entered progressively)
  internal_theory     decimal(6,2)
  external_theory     decimal(6,2)
  internal_practical  decimal(6,2)   // null for theory-only subjects
  external_practical  decimal(6,2)   // null for theory-only subjects

  // Max allowed per component (set at time of assignment)
  max_internal_theory    decimal(6,2)
  max_external_theory    decimal(6,2)
  max_internal_practical decimal(6,2)
  max_external_practical decimal(6,2)

  updated_at     timestamp [not null, default: `now()`]

  indexes {
    (student_id, assignment_id, semester_id) [unique]
    (assignment_id, semester_id)   // Faculty enters marks — filter by assignment
  }

  Note: 'Totals/percentages/grades are NEVER stored. Always computed dynamically. Nulls = not yet entered.'
}


// ─────────────────────────────────────────
// STUDENT REQUESTS
// ─────────────────────────────────────────

Table student_requests {
  id                int          [pk, increment]
  student_id        int          [not null, ref: > students.id]
  target_faculty_id int          [not null, ref: > faculty.id]
  semester_id       int          [not null, ref: > semesters.id]

  // Redundant
  student_name      varchar(150) [not null]
  target_faculty_name varchar(100)[not null]
  division_name     varchar(50)  [not null]

  request_type      varchar(50)  [not null]   // "leave" | "bonafide" | "id_issue" | "late_entry"
  subject           varchar(200) [not null]
  description       text         [not null]
  status            varchar(20)  [not null, default: 'pending']  // pending | approved | rejected
  remarks           text

  created_at        timestamp [not null, default: `now()`]
  updated_at        timestamp [not null, default: `now()`]

  indexes {
    (student_id, semester_id)
    (target_faculty_id, status)
  }
}


// ─────────────────────────────────────────
// AUDIT LOGS
// ─────────────────────────────────────────

Table audit_logs {
  id           int          [pk, increment]
  user_id      int          [not null]           // faculty.id or students.id
  user_type    varchar(20)  [not null]           // "faculty" | "student"
  user_name    varchar(150) [not null]           // Redundant — log must be self-contained
  action       varchar(50)  [not null]           // "CREATE" | "UPDATE" | "DELETE" | "APPROVE" | "REJECT"
  module       varchar(50)  [not null]           // "attendance" | "marks" | "timetable" | "requests" | "student" | "faculty"
  entity_type  varchar(50)  [not null]           // "attendance_session" | "marks" | "timetable_entry" | etc.
  entity_id    int          [not null]
  description  text         [not null]           // "Attendance marked for SYBCA DIV1 - Java on 2026-04-13"
  created_at   timestamp    [not null, default: `now()`]

  indexes {
    (module, entity_type, entity_id)
    (user_id, user_type, created_at)
    (created_at)
  }

  Note: 'Immutable. No UPDATE or DELETE ever. user_name stored so logs survive faculty name changes.'
}
